--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /target
+
+# Environment files with secrets
+.env
+.env.local
+.env.mcp
+
+# MCP settings with tokens (if customized)
+.vscode/mcp-settings.json
