refact: Initialize Blackjack project structure with workspace and core components
- Set up a Cargo workspace for the Blackjack project, including members for core, service, API, and CLI.
- Create a Dockerfile for the Blackjack API with multi-stage build setup.
- Add `blackjack-api` crate with initial dependencies and a placeholder main function.
- Implement `blackjack-cli` crate with complete game logic and player interaction.
- Create `blackjack-core` crate with basic structure and dependencies.
- Establish `blackjack-service` crate with dependencies for future service implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
-[package]
-name = "rust_blackjack"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-rand = "0.9.2"
+[workspace]
+members = [
+    "crates/blackjack-core",
+    "crates/blackjack-service",
+    "crates/blackjack-api",
+    "crates/blackjack-cli"
+]
+resolver = "2"
