--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "cargo": {
                 "args": [
                     "test",
-                    "--package=blackjack-core"
+                    "--package=blackjack-core",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -23,7 +24,8 @@
                 "args": [
                     "test",
                     "--test=integration_tests",
-                    "--package=blackjack-core"
+                    "--package=blackjack-core",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -34,7 +36,8 @@
             "cargo": {
                 "args": [
                     "test",
-                    "--package=blackjack-service"
+                    "--package=blackjack-service",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -46,7 +49,8 @@
                 "args": [
                     "test",
                     "--test=service_tests",
-                    "--package=blackjack-service"
+                    "--package=blackjack-service",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -57,7 +61,8 @@
             "cargo": {
                 "args": [
                     "test",
-                    "--package=blackjack-api"
+                    "--package=blackjack-api",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -69,7 +74,8 @@
                 "args": [
                     "run",
                     "--bin=blackjack-api",
-                    "--package=blackjack-api"
+                    "--package=blackjack-api",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             },
             "args": []
@@ -82,7 +88,8 @@
                 "args": [
                     "test",
                     "--bin=blackjack-api",
-                    "--package=blackjack-api"
+                    "--package=blackjack-api",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -94,7 +101,8 @@
                 "args": [
                     "test",
                     "--test=api_tests",
-                    "--package=blackjack-api"
+                    "--package=blackjack-api",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         },
@@ -106,7 +114,8 @@
                 "args": [
                     "run",
                     "--bin=blackjack-cli",
-                    "--package=blackjack-cli"
+                    "--package=blackjack-cli",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             },
             "args": []
@@ -119,7 +128,8 @@
                 "args": [
                     "test",
                     "--bin=blackjack-cli",
-                    "--package=blackjack-cli"
+                    "--package=blackjack-cli",
+                    "--manifest-path=api/Cargo.toml"
                 ]
             }
         }
