feat: Configure monorepo workspace with VS Code integration
- Remove duplicate rust_blackjack/ folder
- Add .vscode/settings.json with Rust Analyzer configuration
- Add .vscode/tasks.json with backend and frontend tasks
- Create WORKSPACE.md documentation
- Update .gitignore for monorepo structure
- Configure rust-analyzer to use api/Cargo.toml
- Add tasks for full-stack development workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 */target
+**/target
+
+# Rust build artifacts
+Cargo.lock
+*.pdb
 
 # Environment files with secrets
 .env
@@ -10,3 +15,13 @@
 
 # Temporary documentation files
 .tmp-docs
+
+# Frontend build artifacts
+frontend/node_modules
+frontend/build
+frontend/dist
+frontend/.next
+
+# OS files
+.DS_Store
+Thumbs.db
